xtras/coreos/open-vm-tools.yml
kind: DaemonSet
apiVersion: apps/v1beta2
metadata:
  name: open-vm-tools
  namespace: default
  labels:
    k8s-app: open-vm-tools
spec:
  selector:
    matchLabels:
      k8s-app: open-vm-tools
  template:
    metadata:
      name: open-vm-tools
      creationTimestamp: null
      labels:
        k8s-app: open-vm-tools
    spec:
      restartPolicy: Always
      hostPID: true
      schedulerName: default-scheduler
      hostNetwork: true
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: 200m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 30Mi
          terminationMessagePath: /dev/termination-log
          name: open-vm-tools
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: systemd
              readOnly: true
              mountPath: /run/systemd
          terminationMessagePolicy: File
          image: 'godmodelabs/open-vm-tools:latest'
      volumes:
        - name: systemd
          hostPath:
            path: /run/systemd
            type: ''
      dnsPolicy: ClusterFirst
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule  
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 10
status:
  currentNumberScheduled: 10
  numberMisscheduled: 0
  desiredNumberScheduled: 10
  numberReady: 10
  observedGeneration: 1
  updatedNumberScheduled: 10
  numberAvailable: 10
