xtras/coreos/simple-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: simple-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      k8s-app: simple
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: admin
  policyTypes:
    - Ingress
